--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -342,7 +342,7 @@ COM_FM_EXCEL_SALARY_RECIVE="Số tiền được nhận"
 COM_FM_EXCEL_EXTRA_INCOME = "Thu nhập\ntăng thêm"
 COM_FM_EXCEL_ALLOWANCES_36="PC_36"
 COM_FM_EXCEL_NOTE="Ghi chú"
-
+COM_FM_ERROR_NOTIFYCAL ="Có lỗi !!! \n Vui lòng thử lại sau"
 
 
 
