--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -320,6 +320,8 @@ COM_FM_SALARY_INFO = "Bảng Lương "
 COM_FM_EXCEL_TITLE= "BẢNG CHI TIẾT LƯƠNG VÀ PHỤ CẤP CHO CÁN BỘ VIÊN CHỨC TRƯỜNG ĐẠI HỌC MỎ - ĐỊA CHẤT"
 COM_FM_SALARY_INFO_MONTH = " Tháng "
 COM_FM_SALARY_INFO_YEAR = " Năm "
+COM_FM_SALARY_INFO_MONTH_CAP = " THÁNG "
+COM_FM_SALARY_INFO_YEAR_CAP = " NĂM "
 COM_FM_SALARY_HISTORY_EXPORT_EXCEL = "Xuất ra excel"
 COM_FM_EXCEL_NUMBER = "STT"
 COM_FM_EXCEL_SUM_SALARY = "Tổng Tiền"
@@ -343,7 +345,7 @@ COM_FM_EXCEL_EXTRA_INCOME = "Thu nhập\ntăng thêm"
 COM_FM_EXCEL_ALLOWANCES_36="PC_36"
 COM_FM_EXCEL_NOTE="Ghi chú"
 COM_FM_ERROR_NOTIFYCAL ="Có lỗi !!! \n Vui lòng thử lại sau"
-
+COM_FM_EXPORT_EXCEL_EMPLOYEE = "Xuất ra execl theo cán bộ được chọn"
 
 
 
