--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -345,7 +345,8 @@ COM_FM_EXCEL_EXTRA_INCOME = "Thu nhập\ntăng thêm"
 COM_FM_EXCEL_ALLOWANCES_36="PC_36"
 COM_FM_EXCEL_NOTE="Ghi chú"
 COM_FM_ERROR_NOTIFYCAL ="Có lỗi !!! \n Vui lòng thử lại sau"
-COM_FM_EXPORT_EXCEL_EMPLOYEE = "Xuất ra execl theo cán bộ được chọn"
+COM_FM_EXPORT_EXCEL_EMPLOYEE = "Xuất ra excel theo cán bộ được chọn"
+COM_FM_SELECT_EMPLOYEE = "Chọn"
 
 
 
