--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -347,7 +347,7 @@ COM_FM_EXCEL_NOTE="Ghi chú"
 COM_FM_ERROR_NOTIFYCAL ="Có lỗi !!! \n Vui lòng thử lại sau"
 COM_FM_EXPORT_EXCEL_EMPLOYEE = "Xuất ra excel theo cán bộ được chọn"
 COM_FM_SELECT_EMPLOYEE = "Chọn"
-
+COM_FM_SALARY_INFO_EMPLOYEE = "Bảng Lương Cán Bộ "
 
 
 
