--- a/languages/administrator/en-GB/en-GB.com_fm.sys.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.sys.ini
@@ -33,9 +33,9 @@ COM_FM_TITLE_FORM_VIEW_REVENUEDEDUCTION_DESC="Show a form to add or edit a Reven
 
 
 
-COM_FM_TITLE_E_ALLOWANCES="Phụ cấp - Cán bộ"
+COM_FM_TITLE_E_ALLOWANCES="Phụ cấp & Hệ số khác"
 
-COM_FM_TITLE_LIST_VIEW_E_ALLOWANCES="Phụ cấp- Cán bộ"
+COM_FM_TITLE_LIST_VIEW_E_ALLOWANCES="Phụ cấp & Hệ số khác"
 
 COM_FM_TITLE_LIST_VIEW_E_ALLOWANCES_DESC="Show a list of Phụ cấp - Hệ số cán bộ"
 
