--- a/languages/site/en-GB/en-GB.com_fm.ini
+++ b/languages/site/en-GB/en-GB.com_fm.ini
@@ -130,7 +130,7 @@ COM_FM_REVENUEDEDUCTIONS_CHECKED_OUT_TIME="N/A"
 COM_FM_REVENUEDEDUCTIONS_CREATED_BY="Created by"
 COM_FM_REVENUEDEDUCTIONS_GUID="Guid"
 COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID="Tên cán bộ"
-COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID_FILTER="- Select Tên cán bộ -"
+COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID_FILTER="- Chọn Tên cán bộ -"
 COM_FM_REVENUEDEDUCTIONS_PAY_ELECTRICITY="Số điện"
 COM_FM_REVENUEDEDUCTIONS_WATER_CHARGES="Số nước"
 COM_FM_REVENUEDEDUCTIONS_RENT="Tiền nhà"
@@ -180,7 +180,7 @@ COM_FM_TITLE_FORM_VIEW_REVENUEDEDUCTION="RevenuedeductionForm"
 COM_FM_TITLE_FORM_VIEW_REVENUEDEDUCTION_DESC="Show a form to add or edit a Revenuededuction"
 
 
-COM_FM_TITLE_E_ALLOWANCES="Phụ cấp"
+COM_FM_TITLE_E_ALLOWANCES="Phụ cấp & Hệ số khác"
 COM_FM_E_ALLOWANCES_ID="ID"
 COM_FM_E_ALLOWANCES_ORDERING="Order"
 COM_FM_E_ALLOWANCES_STATE="State"
@@ -189,22 +189,22 @@ COM_FM_E_ALLOWANCES_CHECKED_OUT_TIME="N/A"
 COM_FM_E_ALLOWANCES_CREATED_BY="Created by"
 COM_FM_E_ALLOWANCES_GUID="Guid"
 COM_FM_E_ALLOWANCES_EMPLOYEE_GUID="Tên cán bộ"
-COM_FM_E_ALLOWANCES_EMPLOYEE_GUID_FILTER="- Select Tên cán bộ -"
+COM_FM_E_ALLOWANCES_EMPLOYEE_GUID_FILTER="- Chọn Tên cán bộ -"
 COM_FM_E_ALLOWANCES_FE_ALLOWANCES="Hệ số phụ cấp vượt khung"
 COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE="Phụ cấp nghề"
-COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_FILTER="- Select Phụ cấp nghề -"
+COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_FILTER="- Chọn Phụ cấp nghề -"
 COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_OPTION_1="X"
 COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_OPTION_2="Y"
 COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_OPTION_3="Z"
 COM_FM_E_ALLOWANCES_OPTION_ALLOWANCE_OPTION_4="Khác"
 COM_FM_E_ALLOWANCES_EARN_SALARY="Hưởng lương"
 COM_FM_E_ALLOWANCES_OPTION_STUDY="Đi học"
-COM_FM_E_ALLOWANCES_OPTION_STUDY_FILTER="- Select Đi học -"
+COM_FM_E_ALLOWANCES_OPTION_STUDY_FILTER="- Chọn Đi học -"
 COM_FM_E_ALLOWANCES_OPTION_STUDY_OPTION_1="Đi học trong nước"
 COM_FM_E_ALLOWANCES_OPTION_STUDY_OPTION_2="Đi học nước ngoài"
 COM_FM_E_ALLOWANCES_OPTION_STUDY_OPTION_3="Không"
 COM_FM_E_ALLOWANCES_OPTION_BREAK="Trạng thái"
-COM_FM_E_ALLOWANCES_OPTION_BREAK_FILTER="- Select Trạng thái -"
+COM_FM_E_ALLOWANCES_OPTION_BREAK_FILTER="- Chọn Trạng thái -"
 COM_FM_E_ALLOWANCES_OPTION_BREAK_OPTION_1="Không nghỉ"
 COM_FM_E_ALLOWANCES_OPTION_BREAK_OPTION_2="Nghỉ đẻ"
 COM_FM_E_ALLOWANCES_OPTION_BREAK_OPTION_3="Nghỉ không lương"
@@ -266,9 +266,9 @@ COM_FM_EMPLOYEEPAYROLLS_CHECKED_OUT_TIME="N/A"
 COM_FM_EMPLOYEEPAYROLLS_CREATED_BY="Created by"
 COM_FM_EMPLOYEEPAYROLLS_GUID="Guid"
 COM_FM_EMPLOYEEPAYROLLS_EMPLOYEE_GUID="Tên cán bộ"
-COM_FM_EMPLOYEEPAYROLLS_EMPLOYEE_GUID_FILTER="- Select Tên cán bộ -"
+COM_FM_EMPLOYEEPAYROLLS_EMPLOYEE_GUID_FILTER="- Chọn Tên cán bộ -"
 COM_FM_EMPLOYEEPAYROLLS_DEPARTMENT_GUID="Đơn vị chủ quản"
-COM_FM_EMPLOYEEPAYROLLS_DEPARTMENT_GUID_FILTER="- Select Đơn vị chủ quản -"
+COM_FM_EMPLOYEEPAYROLLS_DEPARTMENT_GUID_FILTER="- Chọn Đơn vị chủ quản -"
 COM_FM_EMPLOYEEPAYROLLS_PAYROLL="Tiền Lương"
 COM_FM_TITLE_EMPLOYEEPAYROLL="Tiền lương"
 COM_FM_LEGEND_EMPLOYEEPAYROLL="Tiền lương"
