--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -347,6 +347,9 @@ COM_FM_ERROR_NOTIFYCAL ="Có lỗi !!! \n Vui lòng thử lại sau"
 COM_FM_EXPORT_EXCEL_EMPLOYEE = "Xuất ra excel theo cán bộ được chọn"
 COM_FM_SELECT_EMPLOYEE = "Chọn"
 COM_FM_SALARY_INFO_EMPLOYEE = "Bảng Lương Cán Bộ "
+COM_FM_MATH_COMBACK ="Tính lại lương"
+COM_FM_ON_OFF = "Bật - Tắt"
+COM_FM_COMBACK_DESCRIPTION="Tính lại lương khi có sự nhầm lẫn hoặc chưa chỉnh sửa xong thông tin liên quan đến lương của cán bộ"
 
 
 
