--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -142,7 +142,7 @@ COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID_FILTER="- Chọn Tên cán bộ -"
 COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID_FILTER_DEFAULT_OPTION="- Chọn Tên cán bộ"
 COM_FM_REVENUEDEDUCTIONS_PAY_ELECTRICITY="Số điện"
 COM_FM_REVENUEDEDUCTIONS_WATER_CHARGES="Số nước"
-COM_FM_REVENUEDEDUCTIONS_RENT="Tiền nhà"
+COM_FM_REVENUEDEDUCTIONS_RENT="Số căn"
 COM_FM_REVENUEDEDUCTIONS_DETAIN_TYPE="Kiểu tạm giữ"
 COM_FM_REVENUEDEDUCTIONS_DETAIN_TYPE_OPTION_1="Ngày lương"
 COM_FM_REVENUEDEDUCTIONS_DETAIN_TYPE_OPTION_2="Số tiền"
@@ -170,7 +170,7 @@ COM_FM_FORM_LBL_REVENUEDEDUCTION_PAY_ELECTRICITY="Số điện"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_PAY_ELECTRICITY=""
 COM_FM_FORM_LBL_REVENUEDEDUCTION_WATER_CHARGES="Số nước"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_WATER_CHARGES=""
-COM_FM_FORM_LBL_REVENUEDEDUCTION_RENT="Tiền nhà"
+COM_FM_FORM_LBL_REVENUEDEDUCTION_RENT="Số căn"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_RENT=""
 COM_FM_FORM_LBL_REVENUEDEDUCTION_DETAIN_TYPE="Kiểu tạm giữ"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_DETAIN_TYPE=""
@@ -350,6 +350,13 @@ COM_FM_SALARY_INFO_EMPLOYEE = "Bảng Lương Cán Bộ "
 COM_FM_MATH_COMBACK ="Tính lại lương"
 COM_FM_ON_OFF = "Bật - Tắt"
 COM_FM_COMBACK_DESCRIPTION="Tính lại lương khi có sự nhầm lẫn hoặc chưa chỉnh sửa xong thông tin liên quan đến lương của cán bộ"
+COM_FM_FORM_LBL_CONFIG_RENT_OLD ="Giá tiền nhà cũ"
+COM_FM_FORM_DESC_CONFIG_RENT_OLD=""
+COM_FM_FORM_LBL_CONFIG_RENT_NEW = "Giá tiền nhà mới"
+COM_FM_FORM_DESC_CONFIG_RENT_NEW = ""
+COM_FM_FORM_LBL_REVENUEDEDUCTION_HOUSE_TYPE ="Loại nhà"
+COM_FM_FORM_DESC_REVENUEDEDUCTION_HOUSE_TYPE = ""
+COM_FM_ERROR = "Có lỗi khi nhập dữ liệu. Vui lòng xem lại !!!"
 
 
 
