--- a/languages/administrator/en-GB/en-GB.com_fm.ini
+++ b/languages/administrator/en-GB/en-GB.com_fm.ini
@@ -171,6 +171,7 @@ COM_FM_FORM_DESC_REVENUEDEDUCTION_PAY_ELECTRICITY=""
 COM_FM_FORM_LBL_REVENUEDEDUCTION_WATER_CHARGES="Số nước"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_WATER_CHARGES=""
 COM_FM_FORM_LBL_REVENUEDEDUCTION_RENT="Số căn"
+COM_FM_FORM_LBL_REVENUEDEDUCTION_RENT_NUMBER = "Tiền nhà"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_RENT=""
 COM_FM_FORM_LBL_REVENUEDEDUCTION_DETAIN_TYPE="Kiểu tạm giữ"
 COM_FM_FORM_DESC_REVENUEDEDUCTION_DETAIN_TYPE=""
